--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -24,3 +24,14 @@ aside h1, p {
 .btn{
     width:100%;
 }
+
+@media screen and (max-width: 640px) {
+    aside{
+        width: 100%;
+
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+    }
+  }
