--- a/intro-component-with-signup-form-master/style.css
+++ b/intro-component-with-signup-form-master/style.css
@@ -2,7 +2,9 @@ body{
     background: url(images/bg-intro-desktop.png), #ff7876;
 }
 
-
+.card{
+    border-radius: 10px;
+}
 
 .container{
  margin-top: 10%;
@@ -11,7 +13,7 @@ body{
 aside h1 {
     font-size: 50px;
 }
-aside h1, p {
+aside h1 {
     color: white
 }
 
@@ -23,9 +25,13 @@ aside h1, p {
 
 .btn{
     width:100%;
+    border-radius: 10px
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 900px) {
+    h1, p{
+        text-align: center;
+    }
     aside{
         width: 100%;
 
